envoy-gateway/tls-passthrough.yaml
apiVersion: v1
kind: Service
metadata:
  name: passthrough-echoserver
  labels:
    run: passthrough-echoserver
spec:
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    run: passthrough-echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passthrough-echoserver
spec:
  selector:
    matchLabels:
      run: passthrough-echoserver
  replicas: 1
  template:
    metadata:
      labels:
        run: passthrough-echoserver
    spec:
      containers:
        - name: passthrough-echoserver
          image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-7ee2f3e
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: server-certs
              mountPath: /etc/server-certs
              readOnly: true
      volumes:
        - name: server-certs
          secret:
            secretName: server-certs
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute
spec:
  parentRefs:
    - name: eg
  hostnames:
    - "passthrough.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: passthrough-echoserver
          port: 443
          weight: 1
